# xmpp-bench-proxy

./: .gitignore  Cargo.toml  README.md  xmpp-bench-proxy.toml
.ci/: Jenkinsfile  build.sh
contrib/rtb/: Dockerfile  rtb.sh  rtb.yml
contrib/tsung/: Dockerfile  tsung.sh  tsung.starttls.works.xml  tsung.xml
src/: main.rs
